@@ -1,234 +1,0 @@
-<!DOCTYPE QtCreatorProject>
-<qtcreator>
- <data>
-  <variable>RunConfiguration0-CMakeRunConfiguration.Target</variable>
-  <value type="QString" >/home/brezerk/develop/q4wine/qtcreator-build/q4wine</value>
- </data>
- <data>
-  <variable>RunConfiguration0-CMakeRunConfiguration.WorkingDirectory</variable>
-  <value type="QString" >/home/brezerk/develop/q4wine/qtcreator-build</value>
- </data>
- <data>
-  <variable>RunConfiguration0-RunConfiguration.name</variable>
-  <value type="QString" >/home/brezerk/develop/q4wine/qtcreator-build/q4wine</value>
- </data>
- <data>
-  <variable>RunConfiguration0-type</variable>
-  <value type="QString" >CMakeProjectManager.CMakeRunConfiguration</value>
- </data>
- <data>
-  <variable>RunConfiguration1-CMakeRunConfiguration.Target</variable>
-  <value type="QString" >/home/brezerk/develop/q4wine/qtcreator-build/q4wine</value>
- </data>
- <data>
-  <variable>RunConfiguration1-CMakeRunConfiguration.WorkingDirectory</variable>
-  <value type="QString" >/home/brezerk/develop/q4wine/qtcreator-build</value>
- </data>
- <data>
-  <variable>RunConfiguration1-RunConfiguration.name</variable>
-  <value type="QString" >/home/brezerk/develop/q4wine/qtcreator-build/q4wine</value>
- </data>
- <data>
-  <variable>RunConfiguration1-type</variable>
-  <value type="QString" >CMakeProjectManager.CMakeRunConfiguration</value>
- </data>
- <data>
-  <variable>activeRunConfiguration</variable>
-  <value type="int" >0</value>
- </data>
- <data>
-  <variable>activebuildconfiguration</variable>
-  <value type="QString" >all</value>
- </data>
- <data>
-  <variable>buildConfiguration-all</variable>
-  <valuemap type="QVariantMap" >
-   <value key="ProjectExplorer.BuildConfiguration.DisplayName" type="QString" >all</value>
-   <value key="buildDirectory" type="QString" >/home/brezerk/develop/q4wine/qtcreator-build</value>
-  </valuemap>
- </data>
- <data>
-  <variable>buildconfiguration-all-buildstep0</variable>
-  <valuemap type="QVariantMap" >
-   <value key="ProjectExplorer.BuildConfiguration.DisplayName" type="QString" >all</value>
-   <valuelist key="abstractProcess.Environment" type="QVariantList" >
-    <value type="QString" >CONFIG_PROTECT=/usr/kde/4.2/share/config /usr/kde/4.2/env /usr/kde/4.2/shutdown /usr/share/config /usr/kde/3.5/share/config /usr/kde/3.5/env /usr/kde/3.5/shutdown</value>
-    <value type="QString" >CONFIG_PROTECT_MASK=/etc/gentoo-release /etc/sandbox.d /etc/udev/rules.d /etc/fonts/fonts.conf /etc/terminfo /etc/ca-certificates.conf /etc/texmf/web2c /etc/texmf/language.dat.d /etc/texmf/language.def.d /etc/texmf/updmap.d /etc/revdep-rebuild /etc/splash</value>
-    <value type="QString" >CVS_RSH=ssh</value>
-    <value type="QString" >DBUS_SESSION_BUS_ADDRESS=unix:abstract=/tmp/dbus-6KBp3WLrDh,guid=2224963bd942b19c7e13699949918bad</value>
-    <value type="QString" >DCCC_PATH=/usr/lib/distcc/bin</value>
-    <value type="QString" >DESKTOP_SESSION=default</value>
-    <value type="QString" >DESKTOP_STARTUP_ID=</value>
-    <value type="QString" >DISPLAY=:0.0</value>
-    <value type="QString" >DISTCC_LOG=</value>
-    <value type="QString" >DISTCC_VERBOSE=</value>
-    <value type="QString" >DM_CONTROL=/var/run/xdmctl</value>
-    <value type="QString" >EDITOR=/usr/bin/vim</value>
-    <value type="QString" >GCC_SPECS=</value>
-    <value type="QString" >GDK_USE_XFT=1</value>
-    <value type="QString" >GS_LIB=/home/brezerk/.fonts</value>
-    <value type="QString" >GTK2_RC_FILES=/etc/gtk-2.0/gtkrc:/home/brezerk/.gtkrc-2.0:/home/brezerk/.gtkrc-2.0-kde4:/home/brezerk/.kde4.2/share/config/gtkrc-2.0</value>
-    <value type="QString" >GTK_RC_FILES=/etc/gtk/gtkrc:/home/brezerk/.gtkrc::/home/brezerk/.kde4.2/share/config/gtkrc</value>
-    <value type="QString" >HOME=/home/brezerk</value>
-    <value type="QString" >INFOPATH=/usr/share/info:/usr/share/binutils-data/i686-pc-linux-gnu/2.19.1/info:/usr/share/gcc-data/i686-pc-linux-gnu/4.3.3/info</value>
-    <value type="QString" >INTEL_BATCH=1</value>
-    <value type="QString" >KDE_FULL_SESSION=true</value>
-    <value type="QString" >KDE_MULTIHEAD=false</value>
-    <value type="QString" >KDE_SESSION_UID=1002</value>
-    <value type="QString" >KDE_SESSION_VERSION=4</value>
-    <value type="QString" >LANG=uk_UA.KOI8-U</value>
-    <value type="QString" >LANGUAGE=</value>
-    <value type="QString" >LC_ALL=</value>
-    <value type="QString" >LESS=-R -M --shift 5</value>
-    <value type="QString" >LESSOPEN=|lesspipe.sh %s</value>
-    <value type="QString" >LIBXCB_ALLOW_SLOPPY_LOCK=true</value>
-    <value type="QString" >LOGNAME=brezerk</value>
-    <value type="QString" >MALLOC_CHECK_=2</value>
-    <value type="QString" >MANPATH=/usr/local/share/man:/usr/share/man:/usr/share/binutils-data/i686-pc-linux-gnu/2.19.1/man:/usr/share/gcc-data/i686-pc-linux-gnu/4.3.3/man:/usr/kde/4.2/share/man:/usr/kde/3.5/share/man:/usr/qt/3/doc/man:/opt/opera/share/man</value>
-    <value type="QString" >OPENGL_PROFILE=nvidia</value>
-    <value type="QString" >PAGER=/usr/bin/less</value>
-    <value type="QString" >PATH=/usr/kde/4.2/bin:/sbin:/usr/sbin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/bin:/usr/i686-pc-linux-gnu/gcc-bin/4.3.3:/usr/qt/3/bin:/usr/games/bin</value>
-    <value type="QString" >PKG_CONFIG_PATH=/usr/qt/3/lib/pkgconfig</value>
-    <value type="QString" >PRELINK_PATH_MASK=/usr/lib/klibc</value>
-    <value type="QString" >PWD=/home/brezerk</value>
-    <value type="QString" >QMAKESPEC=linux-g++</value>
-    <value type="QString" >QTDIR=/usr/qt/3</value>
-    <value type="QString" >QT_PLUGIN_PATH=/home/brezerk/.kde4.2/lib/kde4/plugins/:/usr/kde/4.2/lib/kde4/plugins/</value>
-    <value type="QString" >ROOTPATH=/usr/kde/4.2/sbin:/usr/kde/4.2/bin:/sbin:/usr/sbin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/bin:/usr/i686-pc-linux-gnu/gcc-bin/4.3.3:/usr/qt/3/bin:/usr/games/bin</value>
-    <value type="QString" >SANE_CONFIG_DIR=/etc/sane.d</value>
-    <value type="QString" >SESSION_MANAGER=local/totem:@/tmp/.ICE-unix/2464,unix/totem:/tmp/.ICE-unix/2464</value>
-    <value type="QString" >SHELL=/bin/bash</value>
-    <value type="QString" >SHLVL=1</value>
-    <value type="QString" >STRIGI_PLUGIN_PATH=/usr/kde/4.2/lib/strigi:</value>
-    <value type="QString" >USB_DEVFS_PATH=/dev/bus/usb</value>
-    <value type="QString" >USER=brezerk</value>
-    <value type="QString" >WINDOWPATH=7</value>
-    <value type="QString" >XCURSOR_PATH=/usr/kde/4.2/share/icons::~/.icons:/usr/share/icons:/usr/share/pixmaps:/usr/X11R6/lib/X11/icons</value>
-    <value type="QString" >XCURSOR_THEME=pGentoo-24</value>
-    <value type="QString" >XDG_CONFIG_DIRS=/usr/kde/4.2/etc/xdg</value>
-    <value type="QString" >XDG_DATA_DIRS=/usr/kde/4.2/share:/usr/share</value>
-    <value type="QString" >XDM_MANAGED=method=classic</value>
-    <value type="QString" >_=/usr/kde/4.2/bin/kdeinit4</value>
-   </valuelist>
-   <valuelist key="abstractProcess.arguments" type="QVariantList" >
-    <value type="QString" >/home/brezerk/develop/q4wine</value>
-    <value type="QString" >-GUnix Makefiles</value>
-   </valuelist>
-   <value key="abstractProcess.command" type="QString" >/usr/bin/cmake</value>
-   <value key="abstractProcess.enabled" type="bool" >true</value>
-   <value key="abstractProcess.workingDirectory" type="QString" >/home/brezerk/develop/q4wine/qtcreator-build</value>
-   <valuelist key="userArguments" type="QVariantList" />
-  </valuemap>
- </data>
- <data>
-  <variable>buildconfiguration-all-buildstep1</variable>
-  <valuemap type="QVariantMap" >
-   <value key="ProjectExplorer.BuildConfiguration.DisplayName" type="QString" >all</value>
-   <valuelist key="abstractProcess.Environment" type="QVariantList" >
-    <value type="QString" >CONFIG_PROTECT=/usr/kde/4.2/share/config /usr/kde/4.2/env /usr/kde/4.2/shutdown /usr/share/config /usr/kde/3.5/share/config /usr/kde/3.5/env /usr/kde/3.5/shutdown</value>
-    <value type="QString" >CONFIG_PROTECT_MASK=/etc/gentoo-release /etc/sandbox.d /etc/udev/rules.d /etc/fonts/fonts.conf /etc/terminfo /etc/ca-certificates.conf /etc/texmf/web2c /etc/texmf/language.dat.d /etc/texmf/language.def.d /etc/texmf/updmap.d /etc/revdep-rebuild /etc/splash</value>
-    <value type="QString" >CVS_RSH=ssh</value>
-    <value type="QString" >DBUS_SESSION_BUS_ADDRESS=unix:abstract=/tmp/dbus-6KBp3WLrDh,guid=2224963bd942b19c7e13699949918bad</value>
-    <value type="QString" >DCCC_PATH=/usr/lib/distcc/bin</value>
-    <value type="QString" >DESKTOP_SESSION=default</value>
-    <value type="QString" >DESKTOP_STARTUP_ID=</value>
-    <value type="QString" >DISPLAY=:0.0</value>
-    <value type="QString" >DISTCC_LOG=</value>
-    <value type="QString" >DISTCC_VERBOSE=</value>
-    <value type="QString" >DM_CONTROL=/var/run/xdmctl</value>
-    <value type="QString" >EDITOR=/usr/bin/vim</value>
-    <value type="QString" >GCC_SPECS=</value>
-    <value type="QString" >GDK_USE_XFT=1</value>
-    <value type="QString" >GS_LIB=/home/brezerk/.fonts</value>
-    <value type="QString" >GTK2_RC_FILES=/etc/gtk-2.0/gtkrc:/home/brezerk/.gtkrc-2.0:/home/brezerk/.gtkrc-2.0-kde4:/home/brezerk/.kde4.2/share/config/gtkrc-2.0</value>
-    <value type="QString" >GTK_RC_FILES=/etc/gtk/gtkrc:/home/brezerk/.gtkrc::/home/brezerk/.kde4.2/share/config/gtkrc</value>
-    <value type="QString" >HOME=/home/brezerk</value>
-    <value type="QString" >INFOPATH=/usr/share/info:/usr/share/binutils-data/i686-pc-linux-gnu/2.19.1/info:/usr/share/gcc-data/i686-pc-linux-gnu/4.3.3/info</value>
-    <value type="QString" >INTEL_BATCH=1</value>
-    <value type="QString" >KDE_FULL_SESSION=true</value>
-    <value type="QString" >KDE_MULTIHEAD=false</value>
-    <value type="QString" >KDE_SESSION_UID=1002</value>
-    <value type="QString" >KDE_SESSION_VERSION=4</value>
-    <value type="QString" >LANG=uk_UA.KOI8-U</value>
-    <value type="QString" >LANGUAGE=</value>
-    <value type="QString" >LC_ALL=</value>
-    <value type="QString" >LESS=-R -M --shift 5</value>
-    <value type="QString" >LESSOPEN=|lesspipe.sh %s</value>
-    <value type="QString" >LIBXCB_ALLOW_SLOPPY_LOCK=true</value>
-    <value type="QString" >LOGNAME=brezerk</value>
-    <value type="QString" >MALLOC_CHECK_=2</value>
-    <value type="QString" >MANPATH=/usr/local/share/man:/usr/share/man:/usr/share/binutils-data/i686-pc-linux-gnu/2.19.1/man:/usr/share/gcc-data/i686-pc-linux-gnu/4.3.3/man:/usr/kde/4.2/share/man:/usr/kde/3.5/share/man:/usr/qt/3/doc/man:/opt/opera/share/man</value>
-    <value type="QString" >OPENGL_PROFILE=nvidia</value>
-    <value type="QString" >PAGER=/usr/bin/less</value>
-    <value type="QString" >PATH=/usr/kde/4.2/bin:/sbin:/usr/sbin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/bin:/usr/i686-pc-linux-gnu/gcc-bin/4.3.3:/usr/qt/3/bin:/usr/games/bin</value>
-    <value type="QString" >PKG_CONFIG_PATH=/usr/qt/3/lib/pkgconfig</value>
-    <value type="QString" >PRELINK_PATH_MASK=/usr/lib/klibc</value>
-    <value type="QString" >PWD=/home/brezerk</value>
-    <value type="QString" >QMAKESPEC=linux-g++</value>
-    <value type="QString" >QTDIR=/usr/qt/3</value>
-    <value type="QString" >QT_PLUGIN_PATH=/home/brezerk/.kde4.2/lib/kde4/plugins/:/usr/kde/4.2/lib/kde4/plugins/</value>
-    <value type="QString" >ROOTPATH=/usr/kde/4.2/sbin:/usr/kde/4.2/bin:/sbin:/usr/sbin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/bin:/usr/i686-pc-linux-gnu/gcc-bin/4.3.3:/usr/qt/3/bin:/usr/games/bin</value>
-    <value type="QString" >SANE_CONFIG_DIR=/etc/sane.d</value>
-    <value type="QString" >SESSION_MANAGER=local/totem:@/tmp/.ICE-unix/2464,unix/totem:/tmp/.ICE-unix/2464</value>
-    <value type="QString" >SHELL=/bin/bash</value>
-    <value type="QString" >SHLVL=1</value>
-    <value type="QString" >STRIGI_PLUGIN_PATH=/usr/kde/4.2/lib/strigi:</value>
-    <value type="QString" >USB_DEVFS_PATH=/dev/bus/usb</value>
-    <value type="QString" >USER=brezerk</value>
-    <value type="QString" >WINDOWPATH=7</value>
-    <value type="QString" >XCURSOR_PATH=/usr/kde/4.2/share/icons::~/.icons:/usr/share/icons:/usr/share/pixmaps:/usr/X11R6/lib/X11/icons</value>
-    <value type="QString" >XCURSOR_THEME=pGentoo-24</value>
-    <value type="QString" >XDG_CONFIG_DIRS=/usr/kde/4.2/etc/xdg</value>
-    <value type="QString" >XDG_DATA_DIRS=/usr/kde/4.2/share:/usr/share</value>
-    <value type="QString" >XDM_MANAGED=method=classic</value>
-    <value type="QString" >_=/usr/kde/4.2/bin/kdeinit4</value>
-   </valuelist>
-   <valuelist key="abstractProcess.arguments" type="QVariantList" >
-    <value type="QString" >all</value>
-   </valuelist>
-   <value key="abstractProcess.command" type="QString" >make</value>
-   <value key="abstractProcess.enabled" type="bool" >true</value>
-   <value key="abstractProcess.workingDirectory" type="QString" >/home/brezerk/develop/q4wine/qtcreator-build</value>
-   <valuelist key="buildTargets" type="QVariantList" >
-    <value type="QString" >all</value>
-   </valuelist>
-  </valuemap>
- </data>
- <data>
-  <variable>buildconfigurations</variable>
-  <valuelist type="QVariantList" >
-   <value type="QString" >all</value>
-  </valuelist>
- </data>
- <data>
-  <variable>buildstep0</variable>
-  <valuemap type="QVariantMap" >
-   <value key="ProjectExplorer.BuildConfiguration.DisplayName" type="QString" ></value>
-  </valuemap>
- </data>
- <data>
-  <variable>buildstep1</variable>
-  <valuemap type="QVariantMap" >
-   <value key="ProjectExplorer.BuildConfiguration.DisplayName" type="QString" ></value>
-  </valuemap>
- </data>
- <data>
-  <variable>buildsteps</variable>
-  <valuelist type="QVariantList" >
-   <value type="QString" >CMakeProjectManager.CMakeStep</value>
-   <value type="QString" >CMakeProjectManager.MakeStep</value>
-  </valuelist>
- </data>
- <data>
-  <variable>cleansteps</variable>
-  <valuelist type="QVariantList" />
- </data>
- <data>
-  <variable>defaultFileEncoding</variable>
-  <value type="QByteArray" >KOI8-U</value>
- </data>
- <data>
-  <variable>project</variable>
-  <valuemap type="QVariantMap" />
- </data>
-</qtcreator>
